wip: refactor styles and align name and type elements correctly

--- a/ui2/src/components/form/body/client_details/info/name_and_type/select_box/index.scss
+++ b/ui2/src/components/form/body/client_details/info/name_and_type/select_box/index.scss
@@ -3,6 +3,14 @@
     rotate: 180deg;
   }
 
+  .react-aria-Label {
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap;
+  }
+
   .react-aria-Button {
     box-shadow: 0 1px 2px rgba(0 0 0 / 0.1);
     border: 1px solid #dfdfdf;
@@ -14,7 +22,6 @@
     align-items: center;
     justify-items: start;
     width: 100%;
-    max-width: 250px;
     line-height: 0.75rem;
     font-size: 0.75rem;
     color: #333;
